--- a/fifa19/trilha_pandas_v1.ipynb
+++ b/fifa19/trilha_pandas_v1.ipynb
@@ -616,7 +616,7 @@
    ],
    "source": [
     "# quantas linhas e colunas tem o dataset?\n",
-    "print('Temos %0.f linhas e %0.f colunas no dataset' %(fifa.shape0, fifa.shape1))\n"
+    "print('Temos %0.f linhas e %0.f colunas no dataset' %(fifa.shape[0], fifa.shape[1]))\n"
    ]
   },
   {
